Fix: HUD Overlay

--- a/assets/In-game/Large/interface.cfg
+++ b/assets/In-game/Large/interface.cfg
@@ -4,14 +4,14 @@
 
 [element]
 subject = messages
-position = 8, 18
+position = 12, 18
 alignment = -1, -1
 textcolor = 0, 0, 0, 255
 textsize = 4 ;0
 textshadow = 1 ;0
 transition = 3 ;2
 transitionvector = 0, -40
-value = 0, 20
+value = 0, 26
 
 
 ; -----
@@ -20,7 +20,7 @@ value = 0, 20
 
 [element]
 subject = scoremessages
-position = 0, 80
+position = -64, 80
 alignment = 0, -1
 textcolor = 0, 0, 0, 255
 textposition = 2, -1
@@ -29,7 +29,7 @@ textsize = 4
 textshadow = 1
 transition = 3
 transitionvector = 0, -96
-value = 0, 20
+value = 0, 30
 
 [element]
 subject = score
@@ -38,7 +38,7 @@ alignment = 0, -1
 centermiddle = indicator_top_back.png, indicator_top_overlay.png
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
+textcolor = 255, 255, 255, 255
 textposition = 0, -1
 textalignment = 0, 0
 textsize = 3
@@ -51,68 +51,68 @@ textshadow = 1
 
 [element]
 subject = reverser
-position = -8, 1
+position = -16, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
-textposition = 24, 2
+textcolor = 255, 255, 255, 255
+textposition = 24, 0
 textalignment = -1, 0
 textsize = 2
-textshadow = 0
+textshadow = 1
 
 [element]
 subject = power
-position = 74, 1
+position = 66, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
-textposition = 23, 2
+textcolor = 255, 255, 255, 255
+textposition = 23, 0
 textalignment = -1, 0
 textsize = 2
-textshadow = 0
+textshadow = 1
 
 [element]
 subject = brake
-position = 156, 1
+position = 148, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
-textposition = 23, 2
+textcolor = 255, 255, 255, 255
+textposition = 23, 0
 textalignment = -1, 0
 textsize = 2
-textshadow = 0
+textshadow = 1
 
 [element]
 subject = locobrake
-position = 238, 1
+position = 230, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
-textposition = 23, 2
+textcolor = 255, 255, 255, 255
+textposition = 23, 0
 textalignment = -1, 0
 textsize = 2
-textshadow = 0
+textshadow = 1
 
 [element]
 subject = single
-position = 74, 1
+position = 66, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
-textposition = 23, 2
+textcolor = 255, 255, 255, 255
+textposition = 23, 0
 textalignment = -1, 0
 textsize = 2
-textshadow = 0
+textshadow = 1
 
 
 ; ---------------
@@ -123,14 +123,14 @@ textshadow = 0
 subject = doorsleft
 position = -32, 0
 alignment = 0, 1
-centermiddle = doors_left_back.png, doors_left_overlay.png
+centermiddle = doors_left_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
+textcolor = 255, 255, 255, 255
 textposition = -18, -1
 textalignment = 1, 0
 textsize = 2
-textshadow = 0
+textshadow = 1
 transition = 1
 transitionvector = 0, 31
 
@@ -138,14 +138,14 @@ transitionvector = 0, 31
 subject = doorsright
 position = 32, 0
 alignment = 0, 1
-centermiddle = doors_right_back.png, doors_right_overlay.png
+centermiddle = doors_right_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
+textcolor = 255, 255, 255, 255
 textposition = 17, -1
 textalignment = -1, 0
 textsize = 2
-textshadow = 0
+textshadow = 1
 transition = 1
 transitionvector = 0, 31
 
@@ -236,7 +236,7 @@ value = 128 ; vertical radius
 
 [element]
 subject = ai
-position = 8, -26
+position = 12, -52
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 3
@@ -245,7 +245,7 @@ transition = 2
 
 [element]
 subject = clock
-position = 8, -42
+position = 12, -78
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 3
@@ -254,7 +254,7 @@ transition = 2
 
 [element]
 subject = speed
-position = 8, -58
+position = 12, -104
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 3
@@ -263,7 +263,7 @@ transition = 2
 
 [element]
 subject = gradient
-position = 8, -74
+position = 12, -130
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 3
@@ -272,7 +272,25 @@ transition = 2
 
 [element]
 subject = fps
-position = 8, -90
+position = 12, -156
+alignment = -1, 1
+textcolor = 255, 255, 255, 255
+textsize = 3
+textshadow = 1
+transition = 2
+
+[element]
+subject = distnextstation2
+position = 12, -182
+alignment = -1, 1
+textcolor = 255, 255, 255, 255
+textsize = 3
+textshadow = 1
+transition = 2
+
+[element]
+subject = distnextstation
+position = 12, -208
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 3
