--- a/assets/In-game/Slim/interface.cfg
+++ b/assets/In-game/Slim/interface.cfg
@@ -62,6 +62,15 @@ textsize = 1
 textshadow = 1
 
 [element]
+subject = locobrake
+position = 115, 1
+alignment = -1, 1
+textposition = 13, -1
+textalignment = -1, 0
+textsize = 0
+textshadow = 0
+
+[element]
 subject = single
 position = 46, -10
 alignment = -1, 1
@@ -199,8 +208,35 @@ textshadow = 1
 transition = 2
 
 [element]
-subject = fps
+subject = gradient
 position = 8, -74
+alignment = -1, 1
+textcolor = 255, 255, 255, 255
+textsize = 1
+textshadow = 1
+transition = 2
+
+[element]
+subject = fps
+position = 8, -90
+alignment = -1, 1
+textcolor = 255, 255, 255, 255
+textsize = 1
+textshadow = 1
+transition = 2
+
+[element]
+subject = distnextstation2
+position = 8, -116
+alignment = -1, 1
+textcolor = 255, 255, 255, 255
+textsize = 1
+textshadow = 1
+transition = 2
+
+[element]
+subject = distnextstation
+position = 8, -132
 alignment = -1, 1
 textcolor = 255, 255, 255, 255
 textsize = 1
