Remove overlay from Large HUD

--- a/assets/In-game/Large/interface.cfg
+++ b/assets/In-game/Large/interface.cfg
@@ -35,7 +35,7 @@ value = 0, 30
 subject = score
 position = 0, -1
 alignment = 0, -1
-centermiddle = indicator_top_back.png, indicator_top_overlay.png
+centermiddle = indicator_top_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
