Remove HUD Border

--- a/assets/In-game/Default/interface.cfg
+++ b/assets/In-game/Default/interface.cfg
@@ -35,7 +35,7 @@ value = 0, 20
 subject = score
 position = 0, -1
 alignment = 0, -1
-centermiddle = indicator_top_back.png, indicator_top_overlay.png
+centermiddle = indicator_top_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -53,7 +53,7 @@ textshadow = 1
 subject = reverser
 position = -8, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -66,7 +66,7 @@ textshadow = 0
 subject = power
 position = 33, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -79,7 +79,7 @@ textshadow = 0
 subject = brake
 position = 74, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -92,7 +92,7 @@ textshadow = 0
 subject = locobrake
 position = 115, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -105,7 +105,7 @@ textshadow = 0
 subject = single
 position = 33, 1
 alignment = -1, 1
-centermiddle = handle_back.png, handle_overlay.png
+centermiddle = handle_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -123,7 +123,7 @@ textshadow = 0
 subject = doorsleft
 position = -16, 1
 alignment = 0, 1
-centermiddle = doors_left_back.png, doors_left_overlay.png
+centermiddle = doors_left_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -138,7 +138,7 @@ transitionvector = 0, 16
 subject = doorsright
 position = 16, 1
 alignment = 0, 1
-centermiddle = doors_right_back.png, doors_right_overlay.png
+centermiddle = doors_right_back.png, NULL
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
 textcolor = 255, 255, 255, 255
@@ -313,7 +313,7 @@ bottomleft = ats_center_left_back.png, ats_center_left_overlay.png
 bottommiddle = ats_center_middle_back.png, ats_center_middle_overlay.png
 backcolor = 0, 0, 0, 144
 overlaycolor = 255, 255, 255, 64
-textcolor = 255, 255, 255, 192
+textcolor = 255, 255, 255, 255
 textposition = -8, -1
 textalignment = 1, 0
 textsize = 0
