--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -72,7 +72,9 @@
     <Compile Include="Overlays\Marker.cs" />
     <Compile Include="Overlays\RailPath.cs" />
     <Compile Include="Overlays\TimeTableMode.cs" />
+    <Compile Include="Primitives\Button.cs" />
     <Compile Include="Primitives\Cube.cs" />
+    <Compile Include="Primitives\GLControl.cs" />
     <Compile Include="Primitives\Picturebox.cs" />
     <Compile Include="Primitives\Rectangle.cs" />
     <Compile Include="openGL\Vertex.cs" />
