--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -106,6 +106,7 @@
     <Compile Include="SafetySystems\DefaultSafetySystems.cs" />
     <Compile Include="SafetySystems\DSD\DriverSupervisionDevice.cs" />
     <Compile Include="SafetySystems\DSD\DriverSupervisionDevice.ResetModes.cs" />
+    <Compile Include="SafetySystems\DSD\DriverSupervisionDevice.TriggerMode.cs" />
     <Compile Include="SafetySystems\DSD\DriverSupervisionDevice.Types.cs" />
     <Compile Include="SafetySystems\PassAlarm.cs" />
     <Compile Include="SafetySystems\PilotLamp.cs" />
