Change: Minimum play time of 1s for spring sounds, refactor
https://github.com/leezer3/OpenBVE/issues/967

--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Car\Systems\ReadhesionDevice.Types.cs" />
     <Compile Include="Car\Systems\Sanders.cs" />
     <Compile Include="Car\Systems\Sanders.Types.cs" />
+    <Compile Include="Car\Systems\Suspension.cs" />
     <Compile Include="Car\Windscreen\Raindrop.cs" />
     <Compile Include="Car\Windscreen\Windscreen.cs" />
     <Compile Include="Car\Windscreen\Wiper.cs" />
