--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Interface\Logging\LogMessage.MessageType.cs" />
     <Compile Include="Interface\Time.cs" />
     <Compile Include="Interface\Translations\Language.cs" />
+    <Compile Include="Interface\Translations\Language\InterfaceQuickReference.cs" />
     <Compile Include="Interface\Translations\Language\Language.cs" />
     <Compile Include="Interface\Translations\Language\TranslationGroup.cs" />
     <Compile Include="Interface\Translations\Language\TranslationString.cs" />
