--- a/source/RouteManager2/RouteManager2.csproj
+++ b/source/RouteManager2/RouteManager2.csproj
@@ -87,6 +87,7 @@
     <Compile Include="SignalManager\SignalObject.cs" />
     <Compile Include="Stations\RouteStation.cs" />
     <Compile Include="Stations\Station.Stop.cs" />
+    <Compile Include="Tracks\BufferStop.cs" />
     <Compile Include="Tracks\Switch.cs" />
     <Compile Include="Tracks\SwitchType.cs" />
   </ItemGroup>
