Internal: Rename TrackFollowingObject to ScriptedTrain
Better name for what it actually does these days
https://github.com/leezer3/OpenBVE/issues/1009

--- a/source/TrainManager/TrainManager.csproj
+++ b/source/TrainManager/TrainManager.csproj
@@ -132,7 +132,7 @@
     <Compile Include="TrackFollowingObject\AI\TravelData.cs" />
     <Compile Include="TrackFollowingObject\AI\TravelPointData.cs" />
     <Compile Include="TrackFollowingObject\AI\TravelStopData.cs" />
-    <Compile Include="TrackFollowingObject\TrackFollowingObject.cs" />
+    <Compile Include="TrackFollowingObject\ScriptedTrain.cs" />
     <Compile Include="TrainManager.cs" />
     <Compile Include="Train\BrakeSystem.cs" />
     <Compile Include="Train\CommandEntry.cs" />
