--- a/source/Plugins/Route.Bve5/Route.Bve5.csproj
+++ b/source/Plugins/Route.Bve5/Route.Bve5.csproj
@@ -35,8 +35,8 @@
     <Reference Include="Antlr4.Runtime, Version=4.6.0.0, Culture=neutral, PublicKeyToken=09abb75b9ed49849, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Antlr4.Runtime.4.6.6\lib\net45\Antlr4.Runtime.dll</HintPath>
     </Reference>
-    <Reference Include="Bve5_Parsing, Version=1.1.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Bve5_Parsing.OpenBVE.1.1.11\lib\net45\Bve5_Parsing.dll</HintPath>
+    <Reference Include="Bve5_Parsing, Version=1.1.12.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Bve5_Parsing.OpenBVE.1.1.12\lib\net45\Bve5_Parsing.dll</HintPath>
     </Reference>
     <Reference Include="Hnx8.ReadJEnc, Version=1.3.1.2, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\ReadJEnc.1.3.1.2\lib\net46\Hnx8.ReadJEnc.dll</HintPath>
@@ -49,6 +49,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Ude.NetStandard, Version=1.0.2.0, Culture=neutral, PublicKeyToken=103cb45fc06c90e4, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Ude.NetStandard.1.2.0\lib\net45\Ude.NetStandard.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\SignalList.cs" />
