--- a/source/Plugins/Route.Bve5/packages.config
+++ b/source/Plugins/Route.Bve5/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr4.Runtime" version="4.6.6" targetFramework="net461" />
-  <package id="Bve5_Parsing.OpenBVE" version="1.1.11" targetFramework="net48" />
+  <package id="Bve5_Parsing.OpenBVE" version="1.1.12" targetFramework="net48" />
   <package id="ReadJEnc" version="1.3.1.2" targetFramework="net461" requireReinstallation="true" />
+  <package id="Ude.NetStandard" version="1.2.0" targetFramework="net48" />
 </packages>
