Cleaning, use enum for Object Transform Type
Makes it more readable when trying to debug the thing...

--- a/source/Plugins/Route.Bve5/Route.Bve5.csproj
+++ b/source/Plugins/Route.Bve5/Route.Bve5.csproj
@@ -62,6 +62,7 @@
     <Compile Include="MapParser\CustomDictionary.cs" />
     <Compile Include="MapParser\Functions.cs" />
     <Compile Include="Components\ScriptedTrain.cs" />
+    <Compile Include="MapParser\ObjectTransformType.cs" />
     <Compile Include="MapParser\RouteData.cs" />
     <Compile Include="MapParser\Structures.cs" />
     <Compile Include="Plugin.cs" />
