Change: Move some menu components to LibRender2
https://github.com/leezer3/OpenBVE/issues/1023#issuecomment-2301326069
Closes https://github.com/leezer3/OpenBVE/pull/921

--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -57,6 +57,13 @@
     <Compile Include="Fog\Fog.cs" />
     <Compile Include="Lighting\Lighting.cs" />
     <Compile Include="Loading\Loading.cs" />
+    <Compile Include="Menu\Menu.OptionType.cs" />
+    <Compile Include="Menu\Menu.RouteState.cs" />
+    <Compile Include="Menu\MenuEntries\MenuEntry.Caption.cs" />
+    <Compile Include="Menu\MenuEntries\MenuEntry.Command.cs" />
+    <Compile Include="Menu\MenuEntries\MenuEntry.cs" />
+    <Compile Include="Menu\MenuTag.cs" />
+    <Compile Include="Menu\MenuType.cs" />
     <Compile Include="MotionBlur\MotionBlur.cs" />
     <Compile Include="MotionBlur\MotionBlurMode.cs" />
     <Compile Include="Objects\FaceState.cs" />
