Change: Move more of the GL menu to LibRender2, add BSD headers

--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Loading\Loading.cs" />
     <Compile Include="Menu\Menu.OptionType.cs" />
     <Compile Include="Menu\Menu.RouteState.cs" />
+    <Compile Include="Menu\AbstractMenu.cs" />
+    <Compile Include="Menu\MenuBase.cs" />
     <Compile Include="Menu\MenuEntries\MenuEntry.Caption.cs" />
     <Compile Include="Menu\MenuEntries\MenuEntry.Command.cs" />
     <Compile Include="Menu\MenuEntries\MenuEntry.cs" />
